--- a/package.json
+++ b/package.json
@@ -5,24 +5,33 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/base": "^5.0.0-beta.12",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.13.1",
     "@mui/x-data-grid": "^6.5.0",
+    "@mui/x-date-pickers": "^6.12.1",
+    "@nivo/geo": "^0.83.0",
+    "@nivo/line": "^0.83.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.1",
     "axios": "^1.3.4",
     "bootstrap-sweetalert": "^1.0.1",
+    "chart.js": "^4.3.3",
+    "faker": "^6.6.6",
     "jqgrid": "^4.6.4",
     "jquery": "^3.7.0",
     "jquery-ui": "^1.13.2",
     "jqwidgets-framework": "^16.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
@@ -54,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "gh-pages": "^5.0.0"
   }
 }
